# robot-perception-platform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
bridge/: Dockerfile  README.md
bridge/ros2_ws/src/bridge_node/: package.xml  setup.cfg  setup.py
bridge/ros2_ws/src/bridge_node/bridge_node/: bridge.py
docs/: architecture.md
docs/adr/: 0001-annotated-frame-service.md
frame-service/: Dockerfile  frame_service.py
infra/: README.md
robot/: Dockerfile  README.md  entrypoint.sh
robot/ros2_ws/src/perception/: package.xml  setup.py
robot/ros2_ws/src/perception/launch/: demo.launch.py  perception.launch.py
robot/ros2_ws/src/perception/perception/: detector.py  heartbeat.py  listener.py
robot/ros2_ws/src/perception_cpp/: CMakeLists.txt  package.xml
robot/ros2_ws/src/perception_cpp/src/: monitor.cpp
robot/sim/: Dockerfile  entrypoint.sh
services/api/: .dockerignore  Dockerfile  README.md  requirements.txt  test_main.py
services/api/app/: db.py  main.py  schemas.py
web/: README.md
web/src/: App.css  App.tsx
