<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_node</name>
  <version>0.1.0</version>
  <description>The seam: subscribes to ROS2 detection topics and forwards them to World B over HTTP.</description>
  <maintainer email="olegminenko2005@gmail.com">Oleg Minenko</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
